<resources>
    <string name="app_name">Laum Vuelos</string>
    <string name="opcionPrincipal">Iniciar como</string>
    <string name="Princ_Administrador">Administrador</string>
    <string name="Princ_usuario">Usuario</string>
    <string name="Princ_Salir">Salir</string>
    <string name="Emp_GestReservas">Gestión Reservas</string>
    <string name="Emp_GestPagos">Gestión Pagos</string>
    <string name="Emp_GestVuelos">Gestión Vuelos</string>
    <string name="Emp_GestPromocion">Gestionar Promoción</string>
    <string name="Emp_GestAviones">Gestión Aviones</string>
    <string name="Emp_SeleccioneOp">Seleccione una opcion</string>
    <string name="Emp_PermitirReserva">Efectuar Reserva</string>
    <string name="Emp_VerReserva">Ver Reservas</string>
    <string name="Emp_CancelarReserva">Cancelar Reserva</string>
    <string name="Emp_NuevoVuelo">Alta de vuelo</string>
    <string name="Emp_NuevoAvion">Agregar Avión</string>
    <string name="Emp_EliminarAvion">Eliminar Avión</string>
    <string name="Emp_ModificarVuelo">Modificar vuelo</string>
    <string name="Emp_CancelarVuelo">Cancelar vuelo</string>
    <string name="Emp_VerVuelos">Ver vuelos</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Volver">Volver</string>
    <string name="Emp_AgregarTarifa">Agregar Tarifa</string>
    <string name="Emp_ModificarTarifa">Modificar Avión</string>
    <string name="Emp_EliminarTarifa">Eliminar Tarifa</string>
    <string name="Emp_TarifaTitulo">Tarifa</string>
    <string name="Emp_TarifaClase1">Primera Clase:</string>
    <string name="Emp_TarifaClase2">Clase Turista:</string>
    <string name="Emp_TarifaConfirmar">Confirmar</string>
    <string name="Emp_TarifaModificar">¿Desea modificar las tarifas?</string>
    <string name="Emp_GestionarTarifa">Gestionar Tarifas</string>
    <string name="Emp_Impuesto">Impuesto:</string>
    <string name="GestVuelos_AltaVuelo_Id">Id:</string>
    <string name="GestVuelos_AltaVuelo_Fecha">Ingresar Fecha:</string>
    <string name="GestVuelos_AltaVuelo_Fechadia">Día:</string>
    <string name="GestVuelos_AltaVuelo_Fechames">Mes:</string>
    <string name="GestVuelos_AltaVuelo_Fechaaño">Año:</string>
    <string name="GestVuelos_AltaVuelo_IngresoDatos">Ingreso de Datos</string>
    <string name="textCancelar">Cancelar</string>
    <string name="textAceptar">Aceptar</string>
    <string name="título_reservas">Vuelos EZE-ROM</string>
    <string name="texto_reservas">Ingrese la fecha deseada</string>
    <string name="texto_buscar_reserva">Buscar viaje</string>
    <string name="texto_sinFecha">Sin fecha</string>
    <string name="texto_FechaHyM">Hora y minutos:</string>
    <string name="texto_GestVuelosLista">Lista de vuelos</string>
    <string name="texto_GestVuelosDatos">Ingrese los datos del vuelo seleccionado</string>
    <string name="Emp_VerVuelo">Ver vuelo</string>
    <string name="ListaReservas">Lista de reservas</string>
    <string name="DatosVuelo">Datos del vuelo seleccionado</string>
    <string name="ListaDisponibilidadPC">Lista de asientos de Primera Clase disponibles</string>
    <string name="ListaDisponibilidadCT">Lista de asientos de Clase Turista disponibles</string>
    <string name="ListaPagos">Lista de pagos abonados por los pasajeros</string>
    <string name="Pagototal">Abonado hasta el momento:</string>
    <string name="RigeDias">Rige desde los:</string>
    <string name="RigeDiasParte2">días de antelación</string>
    <string name="Descuento">Descuento:</string>
    <string name="PROMOCIÓN">PROMOCIÓN</string>
    <string name="Emp_PromocionModificar">¿Desea modificar la promoción?</string>
    <string name="botonPasajeros">Elegir</string>
    <string name="vuelosDisponibles">Seleccione un vuelo</string>
    <string name="tituloLogin">Iniciar sesion</string>
    <string name="Restricciones">Con restricciones</string>
    <string name="IngresoRestricciones">Ingresar las restricciones para cada clase</string>
    <string name="RestriccionesPC">Primera clase:</string>
    <string name="RestriccionesCT">Clase turista:</string>
    <string name="EleccionCLase">Clase Turista</string>
    <string name="EleccionVuelo">Seleccione el vuelo que desea</string>
    <string name="VerReserva">Ver reserva</string>
    <string name="VerReservaLA">Lista de asientos</string>
    <string name="Emp_CancelarRserva">Cancelar reserva</string>
    <string name="Emp_CancelarRservaIR">Ingresar ID de reserva</string>
    <string name="Emp_CancelarRservaIR2">O seleccione de la lista</string>
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="tituloInfoReserv">Datos de Reserva</string>
</resources>