<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondogestionesempres"
    tools:context=".GestionEmpresa">

    <Button
        android:id="@+id/buttonGestProm"
        android:layout_width="187dp"
        android:layout_height="70dp"
        android:layout_marginTop="22dp"
        android:text="@string/Emp_GestPromocion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGestVuelos" />

    <Button
        android:id="@+id/buttonGestReservas"
        android:layout_width="187dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:text="@string/Emp_GestReservas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/buttonGestVuelos"
        android:layout_width="187dp"
        android:layout_height="65dp"
        android:layout_marginTop="22dp"
        android:text="@string/Emp_GestVuelos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGestReservas" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Emp_SeleccioneOp"
        android:textColor="@color/ColorPrincipal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonVolverGE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGestProm" />

</androidx.constraintlayout.widget.ConstraintLayout>