<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoejemplo2"
    tools:context=".GestionReserva">

    <Button
        android:id="@+id/buttonEfectuarReserva"
        android:layout_width="194dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:text="@string/Emp_PermitirReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonVerReserva"
        android:layout_width="194dp"
        android:layout_height="51dp"
        android:layout_marginTop="22dp"
        android:text="@string/Emp_VerReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEfectuarReserva" />

    <Button
        android:id="@+id/buttonCancelReserva"
        android:layout_width="194dp"
        android:layout_height="51dp"
        android:layout_marginTop="22dp"
        android:text="@string/Emp_CancelarReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVerReserva" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Emp_SeleccioneOp"
        android:textColor="@color/ColorPrincipal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonVolverGR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>