<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoprincipal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAdm"
        android:layout_width="165dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:text="@string/Princ_Administrador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcionPrincipal" />

    <Button
        android:id="@+id/buttonUser"
        android:layout_width="164dp"
        android:layout_height="55dp"
        android:text="@string/Princ_usuario"
        app:layout_constraintBottom_toTopOf="@+id/buttonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdm"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Princ_Salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewOpcionPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/bebas"
        android:text="@string/opcionPrincipal"
        android:textColor="@color/ColorPrincipal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>