<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoingresardatos"
    tools:context=".CancelarReserva">

    <Button
        android:id="@+id/buttonVolverCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCR" />

    <Button
        android:id="@+id/buttonCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Emp_CancelarReserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaCR" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Emp_CancelarRservaIR"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIdCR"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:layout_weight="1"
        android:background="#80FFFFFF"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <ListView
        android:id="@+id/listaCR"
        android:layout_width="343dp"
        android:layout_height="214dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/borde2"
        android:scrollbarThumbVertical="@drawable/scroll_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Emp_CancelarRservaIR2"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIdCR" />


</androidx.constraintlayout.widget.ConstraintLayout>