<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopromo"
    tools:context=".GestPromocion">

    <TextView
        android:id="@+id/textViewModificarPromo"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginStart="111dp"
        android:layout_marginLeft="111dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:fontFamily="@font/bebas"
        android:text="@string/Emp_PromocionModificar"
        android:textSize="15sp"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="267dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <TextView
            android:id="@+id/textView17"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/ColorPrincipal"
            android:fontFamily="@font/bebas"
            android:text="@string/RigeDias" />

        <EditText
            android:id="@+id/editTextDiasProm"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_gravity="center"
            android:inputType="number"
            android:text="0" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/ColorPrincipal"
            android:fontFamily="@font/bebas"
            android:text="@string/RigeDiasParte2" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:fontFamily="@font/bebas"
        android:text="@string/PROMOCIÓN"
        android:textColor="@color/ColorPrincipal"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="267dp"
        android:layout_height="62dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/bebas"
            android:text="@string/Descuento"
            android:textColor="@color/ColorPrincipal" />

        <EditText
            android:id="@+id/editTextDescProm"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="0" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="%"
            android:textColor="@color/ColorPrincipal"
            android:textSize="35sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonConfirmarProm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Emp_TarifaConfirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewModificarPromo" />
</androidx.constraintlayout.widget.ConstraintLayout>