<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondovuelogestiones"
    tools:context=".VerVueloDatos">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/bebas"
        android:gravity="center"
        android:text="@string/DatosVuelo"
        android:textColor="@color/ColorPrincipal"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewListReservasVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/bebas"
        android:text="@string/ListaReservas"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ListView
        android:id="@+id/listareservasVV"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/borde"
        android:scrollbarThumbVertical="@drawable/scroll_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewListReservasVV" />

    <TextView
        android:id="@+id/textVievADPC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bebas"
        android:text="@string/ListaDisponibilidadPC"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listareservasVV" />

    <ListView
        android:id="@+id/listaasientosdisppcVV"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/borde"
        android:scrollbarThumbVertical="@drawable/scroll_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVievADPC" />

    <TextView
        android:id="@+id/textViewADCT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bebas"
        android:text="@string/ListaDisponibilidadCT"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaasientosdisppcVV" />

    <ListView
        android:id="@+id/listaasientosdispctVV"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/borde"
        android:scrollbarThumbVertical="@drawable/scroll_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewADCT" />

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="345dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaasientosdispctVV">

        <TextView
            android:id="@+id/textViewPagototal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas"
            android:text="@string/Pagototal"
            android:textColor="@color/ColorPrincipal"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="499dp" />

        <TextView
            android:id="@+id/textViewPagadototal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas"
            android:text="TextView"
            android:textColor="@color/ColorPrincipal"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="499dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listapagosVV"
        android:layout_width="330dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/borde"
        android:scrollbarThumbVertical="@drawable/scroll_list_view"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewlistaPagosVV" />

    <TextView
        android:id="@+id/textViewlistaPagosVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas"
        android:text="@string/ListaPagos"
        android:textColor="@color/ColorPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonVolverVVD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listapagosVV"
        app:layout_constraintVertical_bias="0.054" />


</androidx.constraintlayout.widget.ConstraintLayout>